--- a/src/packages/styles/index.css
+++ b/src/packages/styles/index.css
@@ -1,1 +1,9 @@
-@import url(./typography.css);
+@import './background/index.css';
+@import './display/index.css';
+@import './elevation/index.css';
+@import './flex/index.css';
+@import './float/index.css';
+@import './grid/index.css';
+@import './round/index.css';
+@import './spacing/index.css';
+@import './text/index.css';
